# TileTwister

./: .gitignore  CMakeLists.txt  README.md  TileTwister.md  TileTwister.rules.md  generate_assets.py  generate_sounds.py  leaderboard.txt  savegame.txt
docs/: architecture.md  implementation_plan.md
docs/presentation/: index.html  launcher.js  script.js  style.css
src/: main.cpp
src/core/: GameLogic.cpp  GameLogic.hpp  Grid.cpp  Grid.hpp  Tile.cpp  Tile.hpp  dummy.cpp
src/engine/: Context.hpp  Renderer.cpp  Renderer.hpp  SoundManager.cpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  dummy.cpp
src/game/: AnimationManager.cpp  AnimationManager.hpp  Game.cpp  Game.hpp  InputManager.cpp  InputManager.hpp  PersistenceManager.cpp  PersistenceManager.hpp  dummy.cpp
tests/core/: GameLogic_test.cpp  Grid_test.cpp
tools/: generate_sounds.py
